[package]
name = "pulsar-consumer"
version = "0.1.0"
authors = ["x <x@mur>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulsar = "1.1.0"
futures = "0.3.13"
tokio = { version="0.2", features=["full"] }
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }
env_logger = "0.8.3"
log = "0.4.14"

[profile.release]
lto = true
